Problem pending  EBUSY: resource busy or locked, unlink

--- a/locales/en.json
+++ b/locales/en.json
@@ -55,5 +55,7 @@
 	"Home": "Home",
 	"Ads": "Ads",
 	"Api": "Api",
-	"delete ------": "delete ------"
+	"delete ------": "delete ------",
+	"testname": "testname",
+	"testname1": "testname1"
 }
