--- a/locales/es.json
+++ b/locales/es.json
@@ -55,5 +55,7 @@
 	"Home": "Inicio",
 	"Ads": "Anuncios",
 	"Api": "Api",
-	"delete ------": "delete ------"
+	"delete ------": "delete ------",
+	"testname": "testname",
+	"testname1": "testname1"
 }
